src/objects/Demo_Farmer_Plot__c.object
<CustomObject>
    <description>Opportunity Bank</description>
    <fields>
        <fullName>Crop_Acreage__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Crop Acreage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crop__c</fullName>
        <label>Crop</label>
        <picklist>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cottton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bananas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cassava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomatoes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demo_Farmer__c</fullName>
        <label>Demo Farmer</label>
        <referenceTo>Demo_Farmer__c</referenceTo>
        <relationshipLabel>Demo Farmer Plot</relationshipLabel>
        <relationshipName>Demo_Farmer_Plot</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Demo Farmer Plot</label>
    <nameField>
        <displayFormat>DFP{00000}</displayFormat>
        <label>Demo Farmer Plot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Farmer Plot</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>